k8s-manifests/directus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
  namespace: tunenumbers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      nodeSelector:
        kubernetes.io/hostname: babel-it
      containers:
        - name: directus
          image: directus/directus:12.0.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8055
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /server/health
              port: 8055
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /server/health
              port: 8055
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /server/health
              port: 8055
            periodSeconds: 30
