k8s-manifests/directus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: directus
  namespace: tunenumbers
spec:
  type: ClusterIP
  ports:
    - port: 8055
      targetPort: 8055
  selector:
    app: directus
