k8s-manifests/directus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus-ingress
  namespace: tunenumbers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cms.tunenumbers.de
      secretName: directus-tls
  rules:
    - host: cms.tunenumbers.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directus
                port:
                  number: 8055
